--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
+
 {
+  "type": "module",
   "name": "eventhub",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +11,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "seed": "node scripts/seed.js",
+    "@faker-js/faker": "^9.8.0",
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
